text align fix

--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ section {
 .home-content {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  text-align: right;
+  align-items: flex-start;
+  text-align: left;
 }
 
 .home-content h1 {
